delete the old documentation page. improve css. improve syntaxe

--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -91,7 +91,7 @@ permalink: /en/index.html
         <details open>
           <summary>How to use the Open Resource Exchange platform</summary>
             The Open Resource Exchange platform offers three services based on open source solutions developed and used by canadian public administrations.
-            You can check our user guide on <a href="./ore-docs.html">how to use the Open Resource Exchange platform</a> to help you search for open digital solutions and share new open projects.
+            You can check our user guide on <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">how to use the Open Resource Exchange platform</a> to help you search for open digital solutions and share new open projects.
         </details>
       </li>
       <li>
