--- a/_pages/fr/index.html
+++ b/_pages/fr/index.html
@@ -91,7 +91,7 @@ permalink: /fr/index.html
         <details open>
           <summary>Comment utiliser la plateforme Échange de Ressources Ouvert</summary>
             La plateforme Échange de Ressources Ouvert offre trois services basés sur le partage de solutions numériques ouvertes en provenance des différentes administrations publiques canadiennes.
-            Consultez le guide sur <a href="./ero-docs.html">comment utiliser la plateforme Échange de Ressources Ouvert</a> pour vous aider à trouver des solutions ouvertes et à partager de nouveaux projets.
+            Consultez le guide sur <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">comment utiliser la plateforme Échange de Ressources Ouvert</a> pour vous aider à trouver des solutions ouvertes et à partager de nouveaux projets.
         </details>
       </li>
       <li>
