--- a/_pages/fr/normes-ouvertes.html
+++ b/_pages/fr/normes-ouvertes.html
@@ -6,18 +6,11 @@ permalink: /fr/normes-ouvertes.html
 ---
 
 <h1 property="name" id="wb-cont">Normes ouvertes</h1>
-<p>
-  Une norme ou standard ouvert réfère à tout format de données interopérable et tout protocole de communication, d’interconnexion ou d’échange dont les spécifications techniques sont publiques sans aucune restriction d’accès ou de mise en oeuvre.
-</p>
-<p>
-  Consultez la liste des normes ouvertes utilisées par les administrations publiques canadiennes.
-</p>
-<p>
-  Vous pouvez <strong>ajouter</strong> un standard ou <strong>modifier</strong> ses informations en utilisant le <a href="./norme-ouverte-formulaire.html">Formulaire des Normes Ouvertes</a>.
-</p>
-<p>
-  <strong>Besoin d’aide?</strong> Consultez la documentation sur <a href="./ero-docs.html">comment utiliser la plateforme Échange de Ressources Ouvert</a>.
-</p>
+<p>Une norme ou standard ouvert réfère à tout format de données interopérable et tout protocole de communication, d’interconnexion ou d’échange dont les spécifications techniques sont publiques sans aucune restriction d’accès ou de mise en oeuvre.</p>
+<p>Consultez la liste des normes ouvertes utilisées par les administrations publiques canadiennes.</p>
+<p>Vous pouvez <strong>ajouter</strong> un standard ou <strong>modifier</strong> ses informations en utilisant le <a href="./norme-ouverte-formulaire.html">Formulaire des Normes Ouvertes</a>.</p>
+<p class="mrgn-bttm-md"><strong>Besoin d’aide?</strong> Consultez la documentation sur <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">comment utiliser la plateforme Échange de Ressources Ouvert</a>.</p>
+
 {% include standardTable.html %}
 
 <p>Les données sont aussi disponible en <a href="../standard.json" target="_blank">format JSON</a>.</p>
