--- a/_pages/en/docs.html
+++ b/_pages/en/docs.html
@@ -1,164 +1,115 @@
 ---
 layout: default
-ref: docs
+ref: oreDocs
 lang: en
 permalink: /en/docs.html
 ---
+<div class="row profile">
+  <div class="col-md-12">
+    <h1 property="name" id="wb-cont">Documentation</h1>
+  </div>
 
-<h1 property="name" id="wb-cont">Documentation</h1>
-
-<div class="row">
-  <nav role="navigation" class="col-md-12">
-    <div class="panel panel-default">
-      <header class="panel-heading">
-        <h2 class="panel-title">Table of contents</h2>
-      </header>
-      <div class="panel-body">
-        <ul class="list-unstyled">
-          <li><a href="#how_to_add_your_data">How to add your data</a>
-            <ul>
-              <li><a href="#adding_your_administration">Adding your administration</a></li>
-              <li><a href="#adding_open_source_code">Adding_open_source_code</a></li>
-              <li><a href="#adding_open_source_software">Adding open source software</a></li>
-            </ul>
-          </li>
-          <li><a href="#directory_structure">Directory structure</a>
-            <ul>
-              <li><a href="#administrations">Administrations</a></li>
-              <li><a href="#code">Code</a></li>
-              <li><a href="#software">Software</a></li>
-              <li><a href="#standard">Standard</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <div class="col-md-12">
+    <h2>How to use the Open Resource Exchange platform</h2>
+    <p>
+      The Open Resource Exchange platform offers three services based on open source solutions developed and used by canadian public administrations.
+      The following documentation acts as a user guide, providing information and instructions on how to benefit from each offered service.
+    </p>
+    <ul class="list-unstyled">
+      <li>
+        <details>
+          <summary>Open Source Code</summary>
+          <p>
+            This service offers a sharing space for open source codes developed by different levels of canadian public administrations (federal, provincial, municipal and aboriginal).
+          </p>
+          <p>
+            You will find a catalog of all the available open source projects, where each project is described by the following fields:
+          </p>
+          <ul>
+            <li><strong>Project name</strong>: The name of the open source code. A hyperlink is available providing more information on the project, such as the name of the administration who developed the project, the project creation date, its license, etc.</li>
+            <li><strong>Category</strong>: The software category to which the open source code belongs, according to the project activity domain. Categories available for this field correspond to the family of Softwares of the 2019-UNSPSC Taxonomy Codes.</li>
+            <li><strong>Description</strong>: A brief description of the program features.</li>
+            <li><strong>License</strong>: The license under which the project is released. Use the hyperlink to access the licence’s file, located usually in the project public repository.</li>
+            <li><strong>Code repo</strong>: The public repository of the project, where the open source code is hosted (for example GitHub, GitLab, BitBucket etc.).</li>
+          </ul><br>
+          <p>
+            <strong>Use this catalog</strong> to find open digital solutions that fit your specific needs. To help you with the research process, filtering options are available:<br>
+          </p>
+          <ul>
+            <li>You can filter the projects according to a list of filtering options such as the level of government, the public administration, etc.</li>
+            <li>You can also filter the names and descriptions of the source codes by entering a sentence, a word or a letter in the "Filter items" input.</li>
+          </ul><br>
+          <p>
+            <strong>How to share a new open source code or update the information of a project that is already available in the catalog</strong>
+          </p>
+          <p>
+            Whether you’re an administration that already has projects in the catalog, or an administration that wishes to start sharing its open source content, you're free to update the open resource exchange catalog, by adding a new solution or updating the information of an existing one, using the <a href="./open-source-code-form.html">Open Source Code Form</a>.
+            The form will allow us to identify your request, analyze it and execute it.
+          </p>
+        </details>
+      </li>
+      <li>
+        <details>
+          <summary>Open Source Software</summary>
+          <p>
+            This service offers a sharing space for open source software used by different levels of canadian public administrations (federal, provincial, municipal and aboriginal).
+          </p>
+          <p>
+            You will find a catalog of all the available open source software, where each software is described by the following fields:
+          </p>
+          <ul>
+            <li><strong>Software</strong>: The name of the open source software. A hyperlink is available providing a list of public administrations using this software.</li>
+            <li><strong>Category</strong>: The software category to which the open source software belongs, according to the software activity domain. Categories available for this field correspond to the family of Softwares of the 2019-UNSPSC Taxonomy Codes.</li>
+            <li><strong>Description</strong>: A brief description of the software features.</li>
+            <li><strong>License</strong>: The license under which the software is released. Use the hyperlink to access the licence’s file, located usually in the project public repository.</li>
+            <li><strong>Usage</strong>: The number of public administrations using the open source software.</li>
+          </ul><br>
+          <p>
+            <strong>Use this catalog</strong> to find open digital solutions that fit your specific needs. To help you with the research process, filtering options are available:<br>
+          </p>
+          <ul>
+            <li>You can filter the projects according to a list of filtering options such as the level of government, the license, etc.</li>
+            <li>You can also filter the names and descriptions of the source software by entering a sentence, a word or a letter in the "Filter items" input.</li>
+          </ul><br>
+          <p>
+            <strong>How to share a new open source software or update the information of a project that is already available in the catalog</strong>
+          </p>
+          <p>
+            Whether you’re an administration that already added the open source software it’s using to the catalog, or an administration that wishes to start sharing its open source content, you're free to update the open resource exchange catalog, by adding a new open source software or updating the information of an existing one, using the <a href="./open-source-software-form.html">Open Source Software Form</a>.
+            The form will allow us to identify your request, analyze it and execute it.
+          </p>
+        </details>
+      </li>
+      <li>
+        <details>
+          <summary>Open Standards</summary>
+          <p>
+            This service offers a sharing space for open standards used by different levels of canadian public administrations (federal, provincial, municipal and aboriginal).
+          </p>
+          <p>
+            You will find a catalog of all the available open standards, where each standard is described by the following fields:
+          </p>
+          <ul>
+            <li><strong>Standard</strong>: The name of the standard. A hyperlink is available providing a list of public administrations using this standard.</li>
+            <li><strong>Description</strong>: A brief description of the standard.</li>
+            <li><strong>Standard-Setting Organization</strong>: The organization developing, coordinating, promulgating, revising, amending, reissuing, interpreting or producing the standard. Use the hyperlink to access the specification of the standard.</li>
+          </ul><br>
+          <p>
+            <strong>Use this catalog</strong> to find open standards that could help you develop a system that works and communicates with other systems, and ensure an easy upgrade and expansion. To help you with the research process, filtering options are available:<br>
+          </p>
+          <ul>
+            <li>You can filter the standards according to the level of government or/and the tag.</li>
+            <li>You can also filter the names and descriptions of the standards by entering a sentence, a word or a letter in the "Filter items" input.</li>
+          </ul><br>
+          <p>
+            <strong>How to share a new open standard or update the information of a standard that is already available in the catalog</strong>
+          </p>
+          <p>
+            Whether you’re an administration that already added the open standard it’s using to the catalog, or an administration that wishes to start sharing its open source content, you're free to update the open resource exchange catalog, by adding a new open standard or updating the information of an existing one, using <a href="./open-source-standard-form.html">the Open Standards Form</a>.
+            The form will allow us to identify your request, analyze it and execute it.
+          </p>
+        </details>
+      </li>
+    </ul>
+  </div>
 </div>
-
-<h2 id="how_to_add_your_data">How to add your data</h2>
-
-<h3 id="adding_your_administration">Adding your administration</h3>
-<p>
-  In the <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/administrations">administrations</a> directory add your adminstration in the
-  <a href="https://github.com/canada-ca/ore-ero/blob/master/_data/administrations/federal.yml">federal.yml</a>,
-  <a href="https://github.com/canada-ca/ore-ero/blob/master/_data/administrations/provincial.yml">provincial.yml</a> or
-  <a href="https://github.com/canada-ca/ore-ero/blob/master/_data/administrations/municipal.yml">municipal.yml</a> file.
-</p>
-
-<h3 id="adding_open_source_code">Adding Open Source Code</h3>
-
-<h4 id="your_administration_is_already_there">Your administration is already there:</h4>
-<p>If there is already a file for your adminstration under the <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/code">code</a> directory, you can edit that file to add your open source code.</p>
-
-<p>You can copy the following at the bottom of the file, and change the informtion for your code. These are only the mandatory fields.</p>
-
-<pre>
-  <code>
-  -
-    contact:
-      email: "abc@xyz.com"
-    date:
-      created: "YYYY-MM-DD"
-      metadataLastUpdated: "YYYY-MM-DD"
-    description:
-      en: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
-      fr: "Quisque bibendum ante ligula, porta vestibulum enim egestas vel."
-    name:
-      en: "Example"
-      fr: "Exemple"
-    licences:
-      -
-        URL:
-          en: "https://example.com/repo/example/LICENCE-en"
-          fr: "https://example.com/repo/example/LICENCE-fr"
-        spdxID: "XYZ-1.0"
-    repositoryURL:
-      en: "https://example.com/repo/example"
-      fr: "https://example.com/repo/example"
-    tags:
-      en:
-        - "tag1-en"
-      fr:
-        - "tag1-fr"
-  </code>
-</pre>
-
-<p>
-  For more informations, click <a href="./open-source-code-schema.html">here</a> to see the Metadata Schema for Open Source Code.
-  If you are interested to contribute with us, fill out <a href="./open-source-code-form.html">the open source code form</a>.
-</p>
-
-<h4 id="your_administration_needs_to_be_added">Your administration needs to be added:</h4>
-<p>
-  If your adminstration doesn't have a file under the
-  <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/code">code</a> directory, you need to create a new file for your administration. Use the
-  <a href="https://raw.githubusercontent.com/canada-ca/ore-ero/master/_data_templates/code_mandatory.yml">code template with only mandatory fields</a>.
-</p>
-
-<h3 id="adding_open_source_software">Adding Open Source Software</h3>
-
-<h4 id="the_software_is_already_there">The software is already there</h4>
-<p>If there is already a file for the open source software you are using under the <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/software">software</a> directory, you need to check if your adminstration is already listed as using the open source software.</p>
-
-<p>If not, you can copy the following at the bottom of the file, and change the informtion for your adminstration and use of the open source software. These are only the mandatory fields.</p>
-
-<pre>
-  <code>
-  -
-    adminCode: abc-def
-    uses:
-      -
-        contact:
-          URL: https://www.example.com
-        name:
-          en: "Example use"
-          fr: "Exemple d'utilisation"
-        description:
-          en: "Etiam rutrum, tellus nec egestas blandit."
-          fr: "Vestibulum fringilla vel purus nec iaculis."
-  </code>
-</pre>
-
-<p>If your adminstration is there add your use of open source software under it, you can copy the following, and change the informtion for your adminstration and use of the open source software. These are only the mandatory fields.</p>
-
-<pre>
-  <code>
-      -
-        contact:
-          URL: https://www.example.com
-        name:
-          en: "Example use"
-          fr: "Exemple d'utilisation"
-        description:
-          en: "Etiam rutrum, tellus nec egestas blandit."
-          fr: "Vestibulum fringilla vel purus nec iaculis."
-  </code>
-</pre>
-
-<p>For more informations, click <a href="./open-source-software-schema.html">here</a> to see the Metadata Schema for Open Source Software.</p>
-
-<h4 id="your_open_source_software_needs_to_be_added">Your open source software needs to be added</h4>
-<p>
-  If your open source software does'nt have a file under the <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/software">software</a> directory,
-  you need to create a new file for the open source software. Use the <a href="https://raw.githubusercontent.com/canada-ca/ore-ero/master/_data_templates/software_mandatory.yml">software template with only mandatory fields</a>.
-</p>
-
-<h2 id="directory_structure">Directory structure</h2>
-
-<h3 id="administrations">Administrations</h3>
-<p>List of Canadian federal, provincial, territorial and municipal administrations. Used to lookup bilingual names.</p>
-
-<h3 id="code">Code</h3>
-<p>List of released open source code by administrations. Sub-folders contain data files. One file per administration.</p>
-<ul>
-  <li>Federal</li>
-  <li>Provincial</li>
-  <li>Municipal</li>
-</ul>
-
-<h3 id="software">software</h3>
-<p>List of open source software used by administrations.</p>
-
-<h3 id="standard">Standard</h3>
-<p>List open standards endorsed or used by administrations.</p>
