--- a/_pages/en/open-source-codes.html
+++ b/_pages/en/open-source-codes.html
@@ -6,19 +6,10 @@ permalink: /en/open-source-codes.html
 ---
 
 <h1 property="name" id="wb-cont">Open Source Code</h1>
-<p>
-  Open source code commonly refers to a software that is released under a license granting anyone permission to use, modify, change or redistribute the code for any purpose.
-  This open source process is an example of open collaboration where everyone benefits from the development of technological tools that solve real issues.
-</p>
-<p>
-  Search the catalog for open source projects developed by different levels of Canadian public administrations.
-</p>
-<p>
-  You may also <strong>add</strong> a project or <strong>update</strong> its data using using the <a href="./open-source-code-form.html">Open Source Code Form</a>.
-</p>
-<p>
-  <strong>Need help?</strong> Check our user guide on <a href="./ore-docs.html">how to use the Open Resource Exchange platform</a>.
-</p><br>
+<p>Open source code commonly refers to a software that is released under a license granting anyone permission to use, modify, change or redistribute the code for any purpose. This open source process is an example of open collaboration where everyone benefits from the development of technological tools that solve real issues.</p>
+<p>Search the catalog for open source projects developed by different levels of Canadian public administrations.</p>
+<p>You may also <strong>add</strong> a project or <strong>update</strong> its data using using the <a href="./open-source-code-form.html">Open Source Code Form</a>.</p>
+<p class="mrgn-bttm-md"><strong>Need help?</strong> Check our user guide on <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">how to use the Open Resource Exchange platform</a>.</p>
 
 {% include codeTable.html %}
 
