--- a/_pages/fr/codes-source-ouverts.html
+++ b/_pages/fr/codes-source-ouverts.html
@@ -6,19 +6,10 @@ permalink: /fr/codes-source-ouverts.html
 ---
 
 <h1 property="name" id="wb-cont">Code Source Ouvert</h1>
-<p>
-  Le code source ouvert fait référence à un logiciel dont la licence permet d’accéder librement au code source, de créer des travaux dérivés et de le redistribuer.
-  Ce processus de développement ouvert est généralement le résultat d’un travail collaboratif pour la mise en place de solutions technologiques qui répondent à des problèmes communs.
-</p>
-<p>
-  Consultez la liste des différents projets ouverts élaborés par des administrations publiques canadiennes.
-</p>
-<p>
-  Vous pouvez <strong>ajouter</strong> un projet ou <strong>modifier</strong> ses informations en utilisant le <a href="./code-source-ouvert-formulaire.html">Formulaire de Code Source Ouvert</a>.
-</p>
-<p>
-  <strong>Besoin d’aide?</strong> Consultez la documentation sur <a href="./ero-docs.html">comment utiliser la plateforme Échange de Ressources Ouvert</a>.
-</p>
+<p>Le code source ouvert fait référence à un logiciel dont la licence permet d’accéder librement au code source, de créer des travaux dérivés et de le redistribuer. Ce processus de développement ouvert est généralement le résultat d’un travail collaboratif pour la mise en place de solutions technologiques qui répondent à des problèmes communs.</p>
+<p>Consultez la liste des différents projets ouverts élaborés par des administrations publiques canadiennes.</p>
+<p>Vous pouvez <strong>ajouter</strong> un projet ou <strong>modifier</strong> ses informations en utilisant le <a href="./code-source-ouvert-formulaire.html">Formulaire de Code Source Ouvert</a>.</p>
+<p class="mrgn-bttm-md"><strong>Besoin d’aide?</strong> Consultez la documentation sur <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">comment utiliser la plateforme Échange de Ressources Ouvert</a>.</p>
 
 {% include codeTable.html %}
 
