--- a/_pages/fr/logiciels-libres.html
+++ b/_pages/fr/logiciels-libres.html
@@ -6,19 +6,10 @@ permalink: /fr/logiciels-libres.html
 ---
 
 <h1 property="name" id="wb-cont">Logiciels libres</h1>
-<p>
-  Un logiciel libre est un logiciel dont le développement de son code source suit un processus ouvert.
-  La licence du logiciel permet d’accéder librement à son code source, de créer des travaux dérivés et de le redistribuer.
-</p>
-<p>
-  Consultez la liste des logiciels libres utilisés par les administrations publiques canadiennes.
-</p>
-<p>
-  Vous pouvez <strong>ajouter</strong> un logiciel ou <strong>modifier</strong> ses informations en utilisant le <a href="./logiciel-libre-formulaire.html">Formulaire de Logiciel Libre</a>.
-</p>
-<p>
-  <strong>Besoin d’aide?</strong> Consultez la documentation sur <a href="./ero-docs.html">comment utiliser la plateforme Échange de Ressources Ouvert</a>.
-</p>
+<p>Un logiciel libre est un logiciel dont le développement de son code source suit un processus ouvert. La licence du logiciel permet d’accéder librement à son code source, de créer des travaux dérivés et de le redistribuer.</p>
+<p>Consultez la liste des logiciels libres utilisés par les administrations publiques canadiennes.</p>
+<p>Vous pouvez <strong>ajouter</strong> un logiciel ou <strong>modifier</strong> ses informations en utilisant le <a href="./logiciel-libre-formulaire.html">Formulaire de Logiciel Libre</a>.</p>
+<p class="mrgn-bttm-md"><strong>Besoin d’aide?</strong> Consultez la documentation sur <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">comment utiliser la plateforme Échange de Ressources Ouvert</a>.</p>
 
 {% include softwareTable.html %}
 
