change the design of the services pages (#679)
* change the design of the services pages

* update osc page

* update the introduction of the services

* change the home page design - add documentation page

* delete the old documentation page. improve css. improve syntaxe

* delete an obsolete file (codeLastUpdated)

--- a/_pages/fr/codes-source-ouverts.html
+++ b/_pages/fr/codes-source-ouverts.html
@@ -5,13 +5,12 @@ lang: fr
 permalink: /fr/codes-source-ouverts.html
 ---
 
-<h1 property="name" id="wb-cont">Code source ouvert</h1>
-<p>Projets libres et dépôts de code des administrations publiques Canadiennes.</p>
-<p>Consultez la liste des <a href="./code-source-ouvert-groupes.html">Groupes de code source ouvert</a> pour trouver plus de projets libres et dépôts de code source ouvert d'administrations publiques Canadiennes.</p>
-<p>Consultez la <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }}</a> et le <a href="./code-source-ouvert-schema.html">Schéma de métadonnées du code source ouvert</a> pour la liste des champs et comment ajouter vos données.</p>
+<h1 property="name" id="wb-cont">Code Source Ouvert</h1>
+<p>Le code source ouvert fait référence à un logiciel dont la licence permet d’accéder librement au code source, de créer des travaux dérivés et de le redistribuer. Ce processus de développement ouvert est généralement le résultat d’un travail collaboratif pour la mise en place de solutions technologiques qui répondent à des problèmes communs.</p>
+<p>Consultez la liste des différents projets ouverts élaborés par des administrations publiques canadiennes.</p>
+<p>Vous pouvez <strong>ajouter</strong> un projet ou <strong>modifier</strong> ses informations en utilisant le <a href="./code-source-ouvert-formulaire.html">Formulaire de Code Source Ouvert</a>.</p>
+<p class="mrgn-bttm-md"><strong>Besoin d’aide?</strong> Consultez la documentation sur <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">comment utiliser la plateforme Échange de Ressources Ouvert</a>.</p>
 
 {% include codeTable.html %}
 
-<p>Les données utilisées pour générer cette liste sont hébergé sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Créez des <i>Pull Requests</i> pour ajouter ou mettre à jour de l'information sur le code source ouvert des administrations fédérale, provinciales, territoriales et municipales du Canada.</p>
-<p>Vous pouvez utiliser le <a href="./code-source-ouvert-formulaire.html">Formulaire de code source ouvert</a> pour mettre à jours des données existantes.</p>
 <p>Les données sont aussi rendu disponible en <a href="../code.json" target="_blank">format JSON</a> pour utilisation dans d'autres applications.</p>
