--- a/_pages/en/open-source-codes.html
+++ b/_pages/en/open-source-codes.html
@@ -6,12 +6,11 @@ permalink: /en/open-source-codes.html
 ---
 
 <h1 property="name" id="wb-cont">Open Source Code</h1>
-<p>Canadian public administrations' open source projects and code repositories.</p>
-<p>See the list of <a href="./open-source-code-groups.html">Open Source Code Groups</a> to find more Canadian public administrations' open source projects and code repositories.</p>
-<p>See the <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }}</a> and <a href="./open-source-code-schema.html">Open Source Code Metadata Schema</a> for the list of fields and how to add you data.</p>
+<p>Open source code commonly refers to a software that is released under a license granting anyone permission to use, modify, change or redistribute the code for any purpose. This open source process is an example of open collaboration where everyone benefits from the development of technological tools that solve real issues.</p>
+<p>Search the catalog for open source projects developed by different levels of Canadian public administrations.</p>
+<p>You may also <strong>add</strong> a project or <strong>update</strong> its data using using the <a href="./open-source-code-form.html">Open Source Code Form</a>.</p>
+<p class="mrgn-bttm-md"><strong>Need help?</strong> Check our user guide on <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">how to use the Open Resource Exchange platform</a>.</p>
 
 {% include codeTable.html %}
 
-<p>The data used to generate this list is hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Create Pull Requests to add or update information on Canadian federal, provincial, territorial and municipal administrations Open Source Code.</p>
-<p>You can use the <a href="./open-source-code-form.html">Open Source Code Form</a> to update existing data.</p>
 <p>Data is also made available in <a href="../code.json" target="_blank">JSON format</a> for open data and use in other applications.</p>
