--- a/_pages/en/open-source-standards.html
+++ b/_pages/en/open-source-standards.html
@@ -6,11 +6,11 @@ permalink: /en/open-source-standards.html
 ---
 
 <h1 property="name" id="wb-cont">Open Standards</h1>
-<p>Canadian public administrations' open standards.</p>
-<p>See the <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }}</a> and <a href="./open-source-standard-schema.html">Open Standards Metadata Schema</a> for the list of fields and how to add your data.</p>
+<p>Open standards refer to file formats, protocols and application interfaces that can be implemented by everyone.The standard specification is publically available and the standardization is open and transparent.</p>
+<p>Search the catalog for open standards that are used by different levels of Canadian public administrations.</p>
+<p>You may also <strong>add</strong> a standard or <strong>update</strong> its data using the <a href="./open-source-standard-form.html">Open Standards Form</a>.</p>
+<p class="mrgn-bttm-md"><strong>Need help?</strong> Check our user guide on <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">how to use the Open Resource Exchange platform</a>.</p>
 
 {% include standardTable.html %}
 
-<p>The data used to generate this list is hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Create Pull Requests to add or update information on open standards used in Canadian federal, provincial, territorial and municipal administrations.</p>
-<p>You can use the <a href="./open-source-standard-form.html">Open Standards Form</a> to update existing data.</p>
 <p>Data is also made available in <a href="../standard.json" target="_blank">JSON format</a> for open data and use in other applications.</p>
