--- a/_pages/fr/logiciels-libres.html
+++ b/_pages/fr/logiciels-libres.html
@@ -6,11 +6,11 @@ permalink: /fr/logiciels-libres.html
 ---
 
 <h1 property="name" id="wb-cont">Logiciels libres</h1>
-<p>Logiciels libres des administrations publiques Canadiennes.</p>
-<p>Consultez la <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }}</a> et le <a href="./logiciel-libre-schema.html">Schéma de métadonnées de logiciels libres ouverts</a> pour la liste des champs et comment ajouter vos données.</p>
+<p>Un logiciel libre est un logiciel dont le développement de son code source suit un processus ouvert. La licence du logiciel permet d’accéder librement à son code source, de créer des travaux dérivés et de le redistribuer.</p>
+<p>Consultez la liste des logiciels libres utilisés par les administrations publiques canadiennes.</p>
+<p>Vous pouvez <strong>ajouter</strong> un logiciel ou <strong>modifier</strong> ses informations en utilisant le <a href="./logiciel-libre-formulaire.html">Formulaire de Logiciel Libre</a>.</p>
+<p class="mrgn-bttm-md"><strong>Besoin d’aide?</strong> Consultez la documentation sur <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">comment utiliser la plateforme Échange de Ressources Ouvert</a>.</p>
 
 {% include softwareTable.html %}
 
-<p>Les données utilisées pour générer cette liste sont hébergé sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Créez des <i>Pull Requests</i> pour ajouter ou mettre à jour de l'information sur les logiciels ouverts des administrations du Canada.</p>
-<p>Vous pouvez utiliser le <a href="logiciel-libre-formulaire.html">Formulaire de logiciels libres ouverts</a> pour mettre à jours des données existantes.</p>
 <p>Les données sont aussi rendu disponible en <a href="../software.json" target="_blank">format JSON</a> pour utilisation dans d'autres applications.</p>
