Update yamale schemas and and update travis file

--- a/_pages/fr/index.html
+++ b/_pages/fr/index.html
@@ -19,7 +19,7 @@ permalink: /fr/index.html
 <div class="row profile">
   <div class="col-md-12">
     <h1 property="name">Services</h1>
-    <p>Les échanges de ressources ouvertes contiennent quatre services principaux qui concentrent sur la partage de solutions dans un formart source ouvert. Le terme code source signifie les éléments accessibles au public qui sont librement disponibles.</p>
+    <p>Les échanges de ressources ouvertes contiennent trois services principaux qui concentrent sur la partage de solutions dans un formart source ouvert. Le terme code source signifie les éléments accessibles au public qui sont librement disponibles.</p>
   </div>
 
   <div class="col-md-4">
