--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -8,7 +8,7 @@ permalink: /en/index.html
 <div class="row profile">
   <div class="col-md-8">
     <h1 property="name" id="wb-cont">{{ site.data.i18n.general.head.title.en }}</h1>
-    <p>Explore how Canadian public administrations (federal, provincial, territorial and municipal) creates greater transparency, accountability, increases citizen engagement, and drives innovation and economic opportunities through open Standards, open source softwares, open data, open information, open dialogue and open Government.</p>
+    <p>Explore how Canadian public administrations (federal, provincial, municipal and aboriginal) create greater transparency and accountability, increase citizen engagement and drive innovation and economic opportunities through open standards, open source software, open data, open information, open dialogue and open Government.</p>
   </div>
 
   <div class="col-md-4 margin-top-small hidden-sm hidden-xs">
@@ -19,7 +19,7 @@ permalink: /en/index.html
 <div class="row profile">
   <div class="col-md-12">
     <h1 property="name">Services</h1>
-    <p>The Open Resource Exchange includes four main services that focus on sharing solutions in an open source format. The term open source refers to publicly accessible items that are freely available for use.</p>
+    <p>The Open Resource Exchange includes three main services that focus on sharing solutions in an open source format. The term open source refers to publicly accessible items that are freely available for use.</p>
   </div>
 
   <div class="col-md-4">
