--- a/_pages/fr/index.html
+++ b/_pages/fr/index.html
@@ -8,7 +8,7 @@ permalink: /fr/index.html
 <div class="row profile">
   <div class="col-md-8">
     <h1 property="name" id="wb-cont">{{ site.data.i18n.general.head.title.fr }}</h1>
-    <p>Découvrez comment les administrations publiques Canadiennes (fédérales, provinciales, territoriales et municipales) créent davantage de transparence et de responsabilisation, augmente la mobilisation citoyenne et favorise l’innovation et les possibilités économiques au moyen de normes ouvertes, logiciels libres, données ouvertes, d’information ouverte, de dialogue ouvert et du Gouvernement ouvert.</p>
+    <p>Explorer comment les administrations publiques Canadiennes (fédérales, provinciales, municipales et autochtones) créent de la transparence et de la responsabilisation, augmente la mobilisation citoyenne et favorise l’innovation et les opportunités économiques à travers les normes ouvertes, logiciels libres, données ouvertes, informations ouvertes, dialogues ouverts et Gouvernement ouvert.</p>
   </div>
 
   <div class="col-md-4 margin-top-small hidden-sm hidden-xs">
