--- a/_pages/fr/index.html
+++ b/_pages/fr/index.html
@@ -126,7 +126,7 @@ permalink: /fr/index.html
             <p>À travers cette plateforme, nous visons à:</p>
             <ul>
               <li><b>Faciliter</b> la collaboration, non seulement entre les juridictions, mais également avec les citoyens.</li>
-              <li><b>Aider</b> les administrations publiques et la communauté <i><strong>open source</i></strong> à trouver des outils ouverts respectant les standards gouvernementaux.</li>
+              <li><b>Aider</b> les administrations publiques et la communauté <i><strong>open source</strong></i> à trouver des outils ouverts respectant les standards gouvernementaux.</li>
               <li><b>Réduire</b> le coût du développement des infrastructures numériques gouvernementales à travers la réutilisation des solutions numériques personnalisables.</li>
               <li><b>Améliorer</b> la facilité d’accès et la vitesse de développement des infrastructures gouvernementales afin que ceux-ci puissent mieux servir leurs utilisateurs.</li>
             </ul>
