udpate intro in french

--- a/_pages/fr/index.html
+++ b/_pages/fr/index.html
@@ -8,7 +8,7 @@ permalink: /fr/index.html
 <div class="row profile">
   <div class="col-md-8">
     <h1 property="name" id="wb-cont">{{ site.data.i18n.general.head.title.fr }}</h1>
-    <p>Explorer comment les administrations publiques Canadiennes (fédérales, provinciales, municipales et autochtones) créent de la transparence et de la responsabilisation, augmente la mobilisation citoyenne et favorise l’innovation et les opportunités économiques à travers les normes ouvertes, logiciels libres, données ouvertes, informations ouvertes, dialogues ouverts et Gouvernement ouvert.</p>
+    <p>Explorez comment les administrations publiques Canadiennes (fédérales, provinciales, municipales et autochtones) créent de la transparence et de la responsabilisation, augmentent la mobilisation citoyenne et favorisent l’innovation et les opportunités économiques à travers les normes ouvertes, logiciels libres, données ouvertes, informations ouvertes, dialogues ouverts et Gouvernement ouvert.</p>
   </div>
   <div class="col-md-4 margin-top-small hidden-sm hidden-xs">
     <img src="../assets/logo_canada-ogp.png" alt="Carte du Canada avec les couleurs du Partenariat pour un gouvernement ouvert" class="pull-right img-responsive thumbnail">
