change page file names

--- a/_pages/en/docs.html
+++ b/_pages/en/docs.html
@@ -105,7 +105,7 @@ permalink: /en/docs.html
             <strong>How to share a new open standard or update the information of a standard that is already available in the catalog</strong>
           </p>
           <p>
-            Whether you’re an administration that already added the open standard it’s using to the catalog, or an administration that wishes to start sharing its open source content, you're free to update the open resource exchange catalog, by adding a new open standard or updating the information of an existing one, using <a href="./open-source-standard-form.html">the Open Standards Form</a>.
+            Whether you’re an administration that already added the open standard it’s using to the catalog, or an administration that wishes to start sharing its open source content, you're free to update the open resource exchange catalog, by adding a new open standard or updating the information of an existing one, using <a href="./open-standard-form.html">the Open Standards Form</a>.
             The form will allow us to identify your request, analyze it and execute it.
           </p>
         </details>
