--- a/_pages/en/open-standards.html
+++ b/_pages/en/open-standards.html
@@ -2,13 +2,13 @@
 layout: default
 ref: standard
 lang: en
-permalink: /en/open-source-standards.html
+permalink: /en/open-standards.html
 ---
 
 <h1 property="name" id="wb-cont">Open Standards</h1>
 <p>Open standards refer to file formats, protocols and application interfaces that can be implemented by everyone.The standard specification is publically available and the standardization is open and transparent.</p>
 <p>Search the catalog for open standards that are used by different levels of Canadian public administrations.</p>
-<p>You may also <strong>add</strong> a standard or <strong>update</strong> its data using the <a href="./open-source-standard-form.html">Open Standards Form</a>.</p>
+<p>You may also <strong>add</strong> a standard or <strong>update</strong> its data using the <a href="./open-standard-form.html">Open Standards Form</a>.</p>
 <p class="mrgn-bttm-md"><strong>Need help?</strong> Check our user guide on <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">how to use the Open Resource Exchange platform</a>.</p>
 
 {% include standardTable.html %}
