update home page contents

--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -74,7 +74,7 @@ permalink: /en/index.html
 
 <div class="row profile">
   <div class="col-md-12">
-    <h1 property="name">Documentation</h1>
+    <h1 property="name">Open Source in Governments</h1>
   </div>
   <div class="col-md-12">
     <ul class="list-unstyled">
@@ -82,13 +82,13 @@ permalink: /en/index.html
         <details open>
           <summary>List of repositories per public administration</summary>
             Canadian public administrations use repositories on Github, GitLab, Bitbucket or any other online service to host their open source projects.
-            Check the <a href="./open-source-code-groups.html">list of repositories per public administration</a> to find open source projects’ repositories for public administrations, according to their level of government (federal, provincial, municipal or aboriginal). 
+            Check the <a href="./open-source-code-groups.html">list of repositories per public administration</a> to find open source projects’ repositories for public administrations, according to their level of government (federal, provincial, municipal or aboriginal).
         </details>
       </li>
       <li>
         <details open>
           <summary>International catalogs for open source solutions</summary>
-          ...
+            Governmental groups across the world have also developed collaborative platforms for sharing open source solutions between public administrations in a country or region. For more information about those platforms, you can check our non-exhaustive <a href="./catalog.html">list of international catalogs for open source solutions</a>.
         </details>
       </li>
     </ul>
