--- a/_pages/fr/index.html
+++ b/_pages/fr/index.html
@@ -67,26 +67,28 @@ permalink: /fr/index.html
       </div>
     </section>
   </div>
+  <div class="col-md-12">
+    <p>Vous pouvez consulter <strong>notre guide</strong> de l'utilsateur pour savoir <a href="./docs.html">comment utiliser la plateforme Échange de Ressources Ouvert</a> pour vous aider à rechercher des solutions numériques ouvertes et à partager de nouveaux projets ouverts.</p>
+  </div>
 </div>
 
 <div class="row profile">
   <div class="col-md-12">
-    <h1 property="name">Documentation</h1>
+    <h1 property="name">Les sources ouvertes dans les gouvernements</h1>
   </div>
   <div class="col-md-12">
     <ul class="list-unstyled">
       <li>
         <details open>
-          <summary>Comment utiliser la plateforme Échange de Ressources Ouvert</summary>
-            La plateforme Échange de Ressources Ouvert offre trois services basés sur le partage de solutions numériques ouvertes en provenance des différentes administrations publiques canadiennes.
-            Consultez le guide sur <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">comment utiliser la plateforme Échange de Ressources Ouvert</a> pour vous aider à trouver des solutions ouvertes et à partager de nouveaux projets.
+          <summary>Liste des répertoires par administration publique </summary>
+            Les administrations publiques canadiennes utilisent des répertoires sur GitHub, GitLab, Bitbucket ou tout autre service en ligne pour héberger les projets ouverts qu’ils ont développés.
+            Consultez la <a href="./code-source-ouvert-groupes.html">liste des répertoires par administration publique</a> pour trouver le(s) répertoire(s) d’hébergement de chacune des administrations publiques selon son niveau de gouvernement (fédéral, provincial, municipal ou autochtone).
         </details>
       </li>
       <li>
         <details open>
-          <summary>Liste des répertoires par administration publique </summary>
-            Les administrations publiques canadiennes utilisent des répertoires sur GitHub, GitLab, Bitbucket ou tout autre service en ligne pour héberger les projets ouverts qu’ils ont développés.
-            Consultez la <a href="./code-source-ouvert-groupes.html">liste des répertoires par administration publique</a> pour trouver le(s) répertoire(s) d’hébergement de chacune des administrations publiques selon son niveau de gouvernement (fédéral, provincial, municipal ou autochtone).
+          <summary>Catalogues internationaux pour les solutions ouvertes</summary>
+            Des administrations gouvernementales à travers le monde ont aussi pris l’initiative de développer des plateformes de collaboration et de partage de solutions numériques ouvertes entre plusieurs unités administratives du pays ou de la région dans laquelle elles se situent. Pour plus d’informations, consultez la liste non-exhaustive de <a href="./catalogue.html">catalogues internationaux pour les solutions ouvertes</a>.
         </details>
       </li>
     </ul>
