--- a/_pages/en/catalog.html
+++ b/_pages/en/catalog.html
@@ -7,7 +7,7 @@ permalink: /en/catalog.html
 
 <div class="row profile">
   <div class="col-md-12">
-    <h1 property="name">International Catalogs</h1>
+    <h1 property="name" id="wb-cont">International Catalogs</h1>
     <p>Search the list of worldwide catalogs for web platforms similar to the Open Research Exchange, offering services for sharing digital open source solutions and promoting openness and collaboration between various governmental groups and their partners.</p>
   </div>
   <div class="col-md-6">
