--- a/_pages/fr/catalogue.html
+++ b/_pages/fr/catalogue.html
@@ -7,7 +7,7 @@ permalink: /fr/catalogue.html
 
 <div class="row profile">
   <div class="col-md-12">
-    <h1 property="name">Catalogues Internationaux</h1>
+    <h1 property="name" id="wb-cont">Catalogues Internationaux</h1>
     <p>Voici une liste de différents catalogues développés à l’échelle internationale. Ceux-ci sont similaires à la plateforme d’échange de ressources ouvert, fournissant un support pour le travail collaboratif entre plusieurs unités gouvernementales et leurs partenaires, ainsi que pour le développement et le partage de solutions numériques ouvertes à travers le(s) pays.</p>
   </div>
   <div class="col-md-6">
