--- a/_pages/en/catalog.html
+++ b/_pages/en/catalog.html
@@ -19,6 +19,7 @@ permalink: /en/catalog.html
         <p><strong>Region:</strong> Europe, all</p>
         <p><strong>Organization:</strong> European commission</p>
         <p><strong>Description:</strong> Joinup aims to help e-Governments to share their experience and digital solutions across Europe.</p>
+        <p><strong>Link:</strong> <a href="https://joinup.ec.europa.eu">https://joinup.ec.europa.eu</a></p>
       </div>
     </section>
   </div>
@@ -32,6 +33,7 @@ permalink: /en/catalog.html
         <p><strong>Region:</strong> America, USA</p>
         <p><strong>Organization:</strong> U.S General Services Administration</p>
         <p><strong>Description:</strong> This platform promotes good practices in code development, collaborative work, and the reuse of solutions across the U.S government.</p>
+        <p><strong>Link:</strong> <a href="https://code.gov">https://code.gov</a></p>
       </div>
     </section>
   </div>
@@ -47,6 +49,7 @@ permalink: /en/catalog.html
         <p><strong>Region:</strong> Europe, Italia</p>
         <p><strong>Organization:</strong> Agency for Digital Italy</p>
         <p><strong>Description:</strong> This platforme acts as a catalog of open solutions used by Italian public administrations.</p>
+        <p><strong>Link:</strong> <a href="https://developers.italia.it/en">https://developers.italia.it/en</a></p>
       </div>
     </section>
   </div>
