add target blank

--- a/_pages/fr/catalogue.html
+++ b/_pages/fr/catalogue.html
@@ -19,7 +19,7 @@ permalink: /fr/catalogue.html
         <p><strong>Région:</strong> Europe, tous</p>
         <p><strong>Organisation:</strong> Comission européenne	</p>
         <p><strong>Description:</strong> Joinup vise à aider les e-gouvernements des différents pays de la Comission européenne à partager leurs expériences et solutions numériques à travers l'Europe.</p>
-        <p><strong>Lien:</strong> <a href="https://joinup.ec.europa.eu">https://joinup.ec.europa.eu</a></p>
+        <p><strong>Lien:</strong> <a href="https://joinup.ec.europa.eu" target="_blank">https://joinup.ec.europa.eu</a></p>
       </div>
     </section>
   </div>
@@ -33,7 +33,7 @@ permalink: /fr/catalogue.html
         <p><strong>Région:</strong> Amérique, États-Unis</p>
         <p><strong>Organisation:</strong> U.S General Services Administration</p>
         <p><strong>Description:</strong> Cette plateforme partage les bonnes pratiques à adopter en ce qui concerne le développement, la collaboration et la réutillisation de codes à travers le gouvernement américain.</p>
-        <p><strong>Lien:</strong> <a href="https://code.gov">https://code.gov</a></p>
+        <p><strong>Lien:</strong> <a href="https://code.gov" target="_blank">https://code.gov</a></p>
       </div>
     </section>
   </div>
@@ -49,7 +49,7 @@ permalink: /fr/catalogue.html
         <p><strong>Région:</strong> Europe, Italie</p>
         <p><strong>Organisation:</strong> Agency for Digital Italy</p>
         <p><strong>Description:</strong> Il s'agit d'un catalogue présentant les différentes ressources ouvertes utilisées par les administrations publiques italiennes.</p>
-        <p><strong>Lien:</strong> <a href="https://developers.italia.it/en">https://developers.italia.it/en</a></p>
+        <p><strong>Lien:</strong> <a href="https://developers.italia.it/en" target="_blank">https://developers.italia.it/en</a></p>
       </div>
     </section>
   </div>
